--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DEX - 去中心化交易所</title>
+    <title>DEX - Decentralized Exchange</title>
   </head>
   <body>
     <div id="root"></div>
